@@ -6,7 +6,7 @@ SOURCE_DIRECTORY=$BUILD_DIRECTORY/tetex-src-${VERSION}
           MD5[0]=4671772820b1e2ce01293ec127679ab2
         WEB_SITE=http://www.tug.org/tetex/
          ENTERED=20010922
-         UPDATED=20021022
+         UPDATED=20040526
       MAKE_NJOBS=1
       LICENSE[0]=http://www.ctan.org/tex-archive/systems/unix/teTeX/1.0/distrib/sources/LICENSE
       MAINTAINER=eric@schabell.com
