@@ -1,0 +1,7 @@
+#!/bin/bash
+
+if [ -z "$TEXEDITOR" ]; then
+    TEXEDITOR=/usr/bin/ed
+fi
+
+export TEXEDITOR
